--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "packageManager": "pnpm@8.15.0"
+  "workspaces": [
+    "apps/*",
+    "services/*",
+    "packages/*"
+  ]
 }
