--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,12 +14,14 @@
     "@theguide/sdk": "workspace:*",
     "@theguide/ui": "workspace:*",
     "@theguide/utils": "workspace:*",
+    "autoprefixer": "^10",
+    "lucide-react": "^0.544.0",
     "next": "14.2.5",
+    "postcss": "^8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8",
-    "autoprefixer": "^10"
+    "recharts": "^3.2.1",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
