--- a/services/api/package.json
+++ b/services/api/package.json
@@ -11,21 +11,25 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
     "zod": "^3.22.0",
-    "prisma": "^5.0.0",
-    "@prisma/client": "^5.0.0",
     "bull": "^4.11.0",
     "redis": "^4.6.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcrypt": "^5.1.0"
+    "dotenv": "^16.4.5",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.2.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/node": "^20.0.0",
+    "@types/compression": "^1.7.5",
+    "@types/morgan": "^1.9.9",
     "typescript": "^5.0.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
