--- a/services/sim-engine/package.json
+++ b/services/sim-engine/package.json
@@ -2,7 +2,6 @@
   "name": "@theguide/sim-engine",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
@@ -15,10 +14,12 @@
     "bull": "^4.11.0",
     "redis": "^4.6.0",
     "random-js": "^2.1.0",
-    "simple-statistics": "^7.8.0"
+    "simple-statistics": "^7.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/uuid": "^9.0.0",
     "typescript": "^5.0.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
