--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.2.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
