--- a/services/api/package.json
+++ b/services/api/package.json
@@ -22,7 +22,8 @@
     "compression": "^1.7.4",
     "express-rate-limit": "^7.2.0",
     "morgan": "^1.10.0",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
