--- a/services/api/package.json
+++ b/services/api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "exports": {
+    "./services/ai/decision-analysis": "./dist/services/ai/decision-analysis.js"
+  },
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
@@ -11,19 +14,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@supabase/supabase-js": "^2.39.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "zod": "^3.22.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "bull": "^4.11.0",
-    "redis": "^4.6.0",
-    "dotenv": "^16.4.5",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.2.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "openai": "^4.28.0",
+    "redis": "^4.6.0",
     "winston": "^3.13.0",
-    "openai": "^4.28.0"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
