--- a/services/sim-engine/tsconfig.json
+++ b/services/sim-engine/tsconfig.json
@@ -4,7 +4,10 @@
     "outDir": "./dist",
     "rootDir": ".",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "paths": {
+      "@theguide/api/*": ["../api/src/*"]
+    }
   },
   "include": [
     "core/**/*",
@@ -14,5 +17,8 @@
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "references": [
+    { "path": "../api" }
   ]
 }
