--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
+    "worker": "node dist/worker.js",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
