add final version changes and add gemini

--- a/packages/ai-services/package.json
+++ b/packages/ai-services/package.json
@@ -23,6 +23,7 @@
     "clean": "rm -rf dist .turbo"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@theguide/models": "workspace:*",
     "openai": "^4.28.0"
   },
