--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -14,13 +14,16 @@ REDIS_URL=redis://localhost:6379
 # CORS
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
+# AI APIs (at least one required)
+GEMINI_API_KEY=your-gemini-api-key
+OPENAI_API_KEY=your-openai-api-key
+
 # External APIs (optional)
 PLAID_CLIENT_ID=
 PLAID_SECRET=
 PLAID_ENV=sandbox
 FRED_API_KEY=
 ALPHA_VANTAGE_API_KEY=
-OPENAI_API_KEY=
 
 # Frontend URL (for email redirects)
 FRONTEND_URL=http://localhost:3000
