--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,12 @@ iOSInjectionProject/
 
 # Turbo
 .turbo/
+
+# SSL Certificates
+*.crt
+*.pem
+*.key
+*.p12
+*.pfx
+ca-certificate.crt
+prod-ca-*.crt
