feat: Configure ESM modules and add Biome linting
- Updated all tsconfig files to use ES2022 modules
- Added "type": "module" to package.json files for ESM support
- Switched from ESLint/Prettier to Biome for faster linting
- Fixed @theguide/ui package build configuration
- Added UI components (Button, Card, Input, Label)
- Fixed import errors in supabase-index.ts
- Created placeholder for market-proxy service

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate:types": "./scripts/generate-types.sh"
   },
   "dependencies": {
-    "@theguide/models": "workspace:*",
+    "@theguide/models": "wnorkspace:*",
     "@theguide/sdk": "workspace:*",
     "@theguide/ui": "workspace:*",
     "@theguide/utils": "workspace:*",
