--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "private": true,
   "packageManager": "bun@1.1.0",
   "scripts": {
-    "build": "turbo run build",
+    "build": "biome check . && turbo run build",
+    "build:only": "turbo run build",
     "build:web": "turbo run build --filter=@theguide/web",
     "dev": "turbo run dev --parallel",
     "dev:web": "turbo run dev --filter=@theguide/web",
     "dev:api": "turbo run dev --filter=@theguide/api",
     "dev:services": "turbo run dev --filter=@theguide/api --filter=@theguide/sim-engine --filter=@theguide/market-proxy",
-    "lint": "turbo run lint",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write .",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "clean": "turbo run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "generate:sdk": "turbo run generate --filter=@theguide/sdk",
     "ios": "cd apps/ios && open TheGuide.xcodeproj"
   },
   "devDependencies": {
-    "prettier": "^3.0.0",
+    "@biomejs/biome": "^2.2.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.4",
     "turbo": "latest"
   },
   "engines": {
