--- a/services/sim-engine/package.json
+++ b/services/sim-engine/package.json
@@ -2,6 +2,7 @@
   "name": "@theguide/sim-engine",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
