--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "supabase": "^2.40.7",
     "turbo": "latest"
   },
   "engines": {
