--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,13 +26,15 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@theguide/models": "workspace:*",
-    "@theguide/utils": "workspace:*",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@theguide/models": "workspace:*",
+    "@theguide/utils": "workspace:*",
+    "@types/marked": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
+    "marked": "^16.3.0",
     "tailwind-merge": "^2.2.0"
   }
 }
