--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,7 +34,7 @@
     "@types/marked": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "dompurify": "^3.0.0",
+    "isomorphic-dompurify": "^2.13.0",
     "framer-motion": "^11.0.0",
     "marked": "^16.3.0",
     "tailwind-merge": "^2.2.0"
