--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,8 +27,8 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "postcss": "^8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "recharts": "^3.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1"
